# jane-street-2024

./: .gitignore  README.md  pyproject.toml
configs/: deepwide_gru_residual.yaml  deepwide_gru_w128.yaml  deepwide_gru_w256.yaml  gru_aux_all11.yaml  gru_aux_all9.yaml  gru_aux_base4.yaml  gru_aux_target_family.yaml  gru_evgeniavolkova_v1.yaml  gru_lags_v1.yaml  gru_marketroll_v1.yaml  gru_v0.yaml  gru_v0_smoke.yaml  lgbm_lags_v1_recent700.yaml  lgbm_marketroll_v1_recent700.yaml  lgbm_v0.yaml  lgbm_v0_full.yaml  lgbm_v0_incremental.yaml  lgbm_v0_recent700.yaml  lgbm_v0_recent700_gpu.yaml  lgbm_v0_smoke_gpu.yaml  tcn_v0.yaml  transformer_v0.yaml
configs/smoke/: gru_evgeniavolkova_v1_smoke.yaml  gru_v0_smoke.yaml  lgbm_v0_smoke.yaml  tcn_v0_smoke.yaml  transformer_v0_smoke.yaml
configs/templates/: gru.yaml  gru_evgeniavolkova.yaml  lgbm_online.yaml
docs/data/: data_semantics_audit.md
docs/experiments/: README.md  deepwide_gru_v1.md  gru_aux_targets_v1.md  gru_v0.md  lag_features_v1.md  lgbm_v0.md  lgbm_v0_baseline.md  lgbm_v0_incremental_vs_full.md  lgbm_v0_split_experiments.md  market_features_v1.md  seq_backbones_v0.md
notebooks/: 00_eda.md  01_metric_and_split.md
src/js2024/: __init__.py  config.py  data.py  data_check.py  data_profile.py  data_semantics_audit.py  download_data.py  estimators.py  features.py  run_incremental_vs_full.py  train_lgbm.py  (+2 more)
tests/: conftest.py  test_config.py  test_data.py  test_data_check_cli.py  test_data_contract.py  test_data_profile.py  test_data_semantics_audit.py  test_download_data.py  test_estimators.py  test_experiments.py  test_gru.py  test_gru_estimator.py  test_gru_evgeniavolkova.py  test_lag_features.py  test_make_smoke_data.py  test_market_features.py  test_marketroll_sweep.py  test_metrics.py  test_run_experiment.py  test_run_incremental_vs_full.py  test_run_lgbm_split_experiments.py  test_train_lgbm_cli.py  test_validation.py  test_walk_forward.py
(+24 files in other folders)
