[project]
name = "js2024"
version = "0.0.0"
description = "Clean, reproducible rebuild of the Kaggle Jane Street 2024 forecasting pipeline (V0: LightGBM baseline)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars",
    "pandas",
    "numpy",
    "scikit-learn",
    "lightgbm",
    "pyarrow",
    "pyyaml",
    "tqdm",
]

[project.scripts]
js2024-train-lgbm = "js2024.train_lgbm:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/js2024"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
