[project]
name = "js2024"
version = "0.0.0"
description = "Clean, reproducible rebuild of the Kaggle Jane Street 2024 forecasting pipeline (V0: LightGBM baseline)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars",
    "pandas",
    "numpy",
    "scikit-learn",
    "lightgbm",
    "pyarrow",
    "pyyaml",
    "tqdm",
    "kaggle",
]

[project.scripts]
js2024-train-lgbm = "js2024.modeling.train_lgbm:main"
js2024-data-check = "js2024.data.data_check:main"
js2024-download-data = "js2024.data.download_data:main"
js2024-make-smoke-data = "js2024.data.make_smoke_data:main"
js2024-data-profile = "js2024.data.data_profile:main"
js2024-run-lgbm-split-experiments = "js2024.runners.run_lgbm_split_experiments:main"
js2024-run-incremental-vs-full = "js2024.runners.run_incremental_vs_full:main"
js2024-data-semantics-audit = "js2024.data.data_semantics_audit:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/js2024"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
